update: 気になる機能を追加
